test/libsolidity/syntaxTests/nameAndTypeResolution/143_no_spurious_identifier_suggestions_with_submatch.sol
contract c {
    function g() public {
        uint va = 1;
        uint vb = vaxyz;
     }
}
// ----
// DeclarationError 7576: (78-83): Undeclared identifier.
